Update officer routes and service dropdown feature

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -147,19 +147,19 @@
         <div class="col-md-4">
             <div class="card shadow-lg p-3 text-center">
                 <h3>Passport</h3>
-                <a href="/citizen_dashboard" class="btn btn-orange mt-2">Apply</a>
+                <a href="/login" class="btn btn-orange mt-2">Apply</a>
             </div>
         </div>
         <div class="col-md-4">
             <div class="card shadow-lg p-3 text-center">
                 <h3>Tazkira</h3>
-                <a href="/citizen_dashboard" class="btn btn-orange mt-2">Apply</a>
+                <a href="/login" class="btn btn-orange mt-2">Apply</a>
             </div>
         </div>
         <div class="col-md-4">
             <div class="card shadow-lg p-3 text-center">
                 <h3>Driving License</h3>
-                <a href="/citizen_dashboard" class="btn btn-orange mt-2">Apply</a>
+                <a href="/login" class="btn btn-orange mt-2">Apply</a>
             </div>
         </div>
     </div>
